입력 출력 연습문제

--- a/python/240102_2주차_1일_복습자료.ipynb
+++ b/python/240102_2주차_1일_복습자료.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2019/04/26 11:34:27\n"
           ]
@@ -49,12 +35,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 문제15 : 자기소개\n",
-        "\n",
-        "name = input()\n",
-        "print(f'안녕하세요. 저는 {name}입니다')"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,24 +43,26 @@
         "id": "ifn20rHoQNqy",
         "outputId": "a91cf49a-76ec-4a94-8aad-ebf5bae57309"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "김다정\n",
             "안녕하세요. 저는 김다정입니다\n"
           ]
         }
+      ],
+      "source": [
+        "# 문제15 : 자기소개\n",
+        "\n",
+        "name = input()\n",
+        "print(f'안녕하세요. 저는 {name}입니다')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 문제 23 : print(10/2)의 출력 결과는 5이다. X\n",
-        "print(10/2)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,19 +70,46 @@
         "id": "xVmATuJuQtaS",
         "outputId": "680fe591-631a-4e1d-853e-23328f86c134"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5.0\n"
           ]
         }
+      ],
+      "source": [
+        "# 문제 23 : print(10/2)의 출력 결과는 5이다. X\n",
+        "print(10/2)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "LzDzxC5KRAyI",
+        "outputId": "626f9d87-9338-4218-e2fc-d8200a53ca85"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'euerty'"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# 문제 39번 문장이 입력되면 모든 q를 e로, b를 n으로 바꾸는 프로그램을 작성해 주세요.\n",
         "\n",
@@ -117,41 +127,39 @@
         "    return seq\n",
         "\n",
         "trans(\"hqllo my bamq is hyqwob\")\n",
-        "trans(\"querty\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "LzDzxC5KRAyI",
-        "outputId": "626f9d87-9338-4218-e2fc-d8200a53ca85"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'euerty'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
+        "trans(\"querty\")\n",
+        "\n",
+        "\n",
+        "```\n",
+        "# 강사의 답\n",
+        "data = input()\n",
+        "\n",
+        "print(data.replace('q', 'e').replace('b', 'n')).\n",
+        "```"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "xrUWoFG2SD6p"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
